# easyreach-vla

./: .gitignore  README.md  inference.py  main.py  proposal.typ  pyproject.toml  references.bib
src/: factory.py  interfaces.py
src/models/: openvla.py
tests/: test_mock_inference.py
